2009-11-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Limit output precision when displaying a function.
	* include/roboptim/core/visualization/gnuplot-function.hh:
	Limit output precision to two digits.
	* tests/finite-difference-gradient.stdout,
	* tests/visualization-gnuplot-function.stdout,
	* tests/visualization-gnuplot-simple.stdout: Regenerate.

2009-11-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Distribute Windows related files.
	Reported by François Keith.
	* Makefile.am: Here.

2009-10-23  Thomas Moulard  <thomas.moulard@gmail.com>

	Handle symbol visibility under Linux.
	* include/roboptim/core/portability.hh: Here.

2009-10-23  Thomas Moulard  <thomas.moulard@gmail.com>

	Add missing ROBOPTIM_DLLEXPORT.
	* include/roboptim/core/visualization/gnuplot-commands.hh,
	* include/roboptim/core/visualization/gnuplot.hh,
	* src/roboptim-core-dummy-plugin.cc: Export all symbols properly.

2009-10-21  Thomas Moulard  <thomas.moulard@gmail.com>

	Enhance error message in solver-factory.hxx.
	* include/roboptim/core/solver-factory.hxx:
	Enhance error message.

2009-10-21  Thomas Moulard  <thomas.moulard@gmail.com>

	Make plug-in loading more robust.
	* include/roboptim/core/solver-factory.hxx: Check problem size
	when loading a plug-in.
	* src/roboptim-core-dummy-plugin.cc: Add getSizeOfProblem function.

2009-10-21  Thomas Moulard  <thomas.moulard@gmail.com>

	Reorganize configure.ac.
	* configure.ac: Change macro order to enhance consistency.

2009-10-07  Thomas Moulard  <thomas.moulard@gmail.com>

	Synchronize.
	* build-aux: Synchronize.
	* doc/Doxyfile.extra.in: Rename from doc/Doxyfile.extra.

2009-10-06  Thomas Moulard  <thomas.moulard@gmail.com>

	Synchronize.
	* build-aux: Here.

2009-10-06  Thomas Moulard  <thomas.moulard@gmail.com>

	Synchronize.
	* build-aux: Here.

2009-10-06  Thomas Moulard  <thomas.moulard@gmail.com>

	Synchronize.
	* build-aux: Here.

2009-10-06  Thomas Moulard  <thomas.moulard@gmail.com>

	Synchronize.
	* build-aux: Here.
